edit-search-infobox-overflow-fix

--- a/src/app/feed/info-box/info-box.component.scss
+++ b/src/app/feed/info-box/info-box.component.scss
@@ -3,12 +3,14 @@
 }
 
 .info-box {
-		-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-		border-radius: 2px;
-		min-height: 420px;
-		width: 100%;
-        margin-bottom: 20px;
+	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16),
+		0 0 0 1px rgba(0, 0, 0, 0.08);
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+	border-radius: 2px;
+	min-height: 420px;
+	width: 100%;
+    margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .row:first-child {
@@ -17,99 +19,100 @@
 }
 
 .leaderboard-item {
-    text-align: left;
-    border-bottom: 2px solid #ccc;
-    padding: 4px 0;
-    font-size: 14px;
-    height: 40px;
-    img {
-        border-radius: 50%;
-    }
-    td {
-        position: relative;
-        padding-left: 10px;
-        padding-right: 0;
-        img {
-            height: 30px;
-            width: 30px;
-        }
-    }
+	text-align: left;
+	border-bottom: 2px solid #ccc;
+	padding: 4px 0;
+	font-size: 14px;
+	height: 40px;
+	img {
+		border-radius: 50%;
+	}
+	td {
+		position: relative;
+		padding-left: 10px;
+		padding-right: 0;
+		img {
+			height: 30px;
+			width: 30px;
+		}
+	}
 }
 
 .data {
-    display: inline-block;
-    text-decoration: none;
-    img {
-        height: 24px;
-        border-radius: 20%;
-    }
-    span {
-        padding: 5px;
-        vertical-align: super;
-    }
+	display: inline-block;
+	text-decoration: none;
+	img {
+		height: 24px;
+		border-radius: 20%;
+	}
+	span {
+		padding: 5px;
+		vertical-align: super;
+	}
 }
 
 .rss {
-    background-color: #F79128;
-    color: white;
-    height: 24px;
-    border-radius: 9%;
+	background-color: #f79128;
+	color: white;
+	height: 24px;
+	border-radius: 9%;
 }
 
 .json {
-    background-color: #5EBC62;
-    color: white;
-    height: 24px;
-    border-radius: 9%;
+	background-color: #5ebc62;
+	color: white;
+	height: 24px;
+	border-radius: 9%;
 }
 
 .leaderboard-count {
-    background-color: #337ab7;
-    height: 30px;
-    width: 30px;
-    padding: 8px 0;
-    text-align: center;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 14px;
-    color: #fff;
+	background-color: #337ab7;
+	height: 30px;
+	width: 30px;
+	padding: 8px 0;
+	text-align: center;
+	border-radius: 50%;
+	font-weight: bold;
+	font-size: 14px;
+	color: #fff;
 }
 
 .leaderboard-label {
-    top: -8px;
-    font-size: 14px;
-    position: absolute;
-    left: 20px;
-    text-align: center;
-    line-height: 24px;
-    background-color: #337ab7;
-    border-radius: 50%;
-    color: #fff;
-    width: 23px;
-    height: 23px;
+	top: -8px;
+	font-size: 14px;
+	position: absolute;
+	left: 20px;
+	text-align: center;
+	line-height: 24px;
+	background-color: #337ab7;
+	border-radius: 50%;
+	color: #fff;
+	width: 23px;
+	height: 23px;
 }
 
 .leaderboard-text {
-    a {
-        font-size: 14px;
-        line-height: 21px;
-    }
+	a {
+		font-size: 14px;
+		line-height: 21px;
+	}
 }
 
 .link-sidebar-container {
-	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16),
+		0 0 0 1px rgba(0, 0, 0, 0.08);
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 	border-radius: 2px;
 	width: 100%;
-	display:flex;
+	display: flex;
 	flex-wrap: wrap;
 	margin: 30px 0px;
 	padding: 15px 10px;
 }
 
 .link-sidebar {
-    margin: 3px 7px;
-    padding: 0px 15px;
+	margin: 3px 7px;
+	padding: 0px 15px;
 }
 
 @media (max-width: 470px) {
